# AK-CVR

./: .gitignore  AK CVR Marks Convertor.py  AK CVR Ripper 2.py  AK CVR Tabulator.py  LICENSE  README.md  main.py  pyproject.toml
